# eson

./: .git-blame-ignore-revs  .gitattributes  .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml  build.rs  cackle.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: cackle.yml  ci.yml
ci/: before_deploy.ps1  before_deploy.sh
examples/: mined.txt  mined2.txt  one_to_one.txt  rubis.txt  rubis_small.txt
scripts/: unify_fds.py  unify_inds.py
src/: cql.rs  cql.rustpeg  dependencies.rs  input.rs  input.rustpeg  macros.rs  main.rs  model.rs  normalize.rs  simple_logger.rs  symbols.rs
