[package]
authors = ["Michael Mior <mmior@uwaterloo.ca>"]
description = "A normalization tool for denormalized databases"

homepage = "https://github.com/michaelmior/eson"
repository = "https://github.com/michaelmior/eson"
readme = "./README.md"

categories = ["command-line-utilities", "database"]
keywords = ["database", "normalization", "NoSQL"]
license = "GPL-3.0"

build = "build.rs"
name = "eson"
version = "0.1.0"

[badges]
appveyor = { repository = "michaelmior/eson", branch = "main", service = "github" }
travis-ci = { repository = "michaelmior/eson", branch = "main" }
maintenance = { status = "experimental" }

[build-dependencies]
peg = "0.6.3"

[dependencies]
argparse = "0.2.1"
defaultmap = "0.3.0"
float-ord = "0.1.2"
group-by = "1.0.0"
itertools = "0.6.1"
ordermap = "0.2.11"
permutation = "0.2.5"
simple-logging = "1.0.1"
string-intern = { version ="0.1.7", default-features = false }
log = "0.3"

[dev-dependencies]
collect-mac = "0.1.0"
