[package]
authors = ["Michael Mior <mmior@uwaterloo.ca>"]
description = "A normalization tool for denormalized databases"

homepage = "https://github.com/michaelmior/eson"
repository = "https://github.com/michaelmior/eson"
readme = "./README.md"

categories = ["command-line-utilities", "database"]
keywords = ["database", "normalization", "NoSQL"]
license = "GPL-3.0"

name = "eson"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
argparse = "0.2.2"
defaultmap = "0.5.0"
float-ord = "0.2.0"
group-by = "1.0.0"
itertools = "0.9.0"
peg = "0.6.3"
permutation = "0.2.5"
string-intern = { version ="0.1.7", default-features = false }
log = "0.4"
indexmap = "1.6.0"

[dev-dependencies]
collect-mac = "0.1.0"
